# fastapi-keycloak-extended

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: python-publish.yml
fastapi_keycloak_extended/: __init__.py  api.py  exceptions.py  model.py  requirements.txt
tests/: __init__.py  app.py
