[project]
name = "fastapi_keycloak_extended"
authors = [
    { name = "Cedric FOWOUE", email = "c.fowoue@lugarsarl.com" }
]
maintainers = [
    { name = "Cedric FOWOUE", email = "c.fowoue@lugarsarl.com" }
]
readme = "README.md"
keywords = ['Keycloak', 'FastAPI', 'Authentication', 'Authorization']
classifiers = [
    'Development Status :: 0 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Session',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: FastAPI',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.10',
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "fastapi_keycloak>=1.0.4",
]

[project.urls]
Documentation = "https://fastapi-keycloak.lugarsarl.com/"
