[project]
name = "fastapi_keycloak_extended"
authors = [
    { name = "Cedvict Loknov", email = "cedvict@gmail.com" }
]
maintainers = [
    { name = "Cedvict Loknov", email = "cedvict@gmail.com" }
]
readme = "README.md"
keywords = ['Keycloak', 'FastAPI', 'Authentication', 'Authorization']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Session',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Framework :: FastAPI',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "fastapi_keycloak>=1.0.10",
]

[project.urls]
Documentation = "https://fastapi-keycloak.code-specialist.com/"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

