[metadata]
name = fastapi_keycloak_extended
version = 1.0.5
author = Cedvict Loknov
author_email = cedvict@gmail.com
description = FastAPI Keycloak Extended
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cedvict/fastapi-keycloak-extended
project_urls =
    Bug Tracker = https://github.com/cedvict/fastapi-keycloak-extended/issues
classifiers =
    'Development Status :: 3 - Alpha'
    'Intended Audience :: Developers'
    'Topic :: Internet :: WWW/HTTP :: Session'
    'Topic :: Internet :: WWW/HTTP :: WSGI'
    'Topic :: Software Development :: Libraries :: Application Frameworks'
    'Topic :: Software Development :: Libraries :: Python Modules'
    'Framework :: FastAPI'
    'License :: OSI Approved :: Apache Software License'
    'Programming Language :: Python :: 3.10'

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]